[ADD] CorsConfigurationSource